--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     </head>
 
     <body>
+
         <div class="tentang-kami">
             <div class="container">
               <div class="row">
@@ -36,5 +37,13 @@
               </div>
             </div>
           </div>
+
+          <footer>
+            <div class="container">
+              <div class="inner-content">
+                <p>Copyright &copy; 2020, TIM G9 Progate DTS Kominfo Batch 2</p>
+              </div>
+            </div>
+          </footer>
     </body>
 </html>
