Add Member Section

--- a/index.html
+++ b/index.html
@@ -9,12 +9,11 @@
 
         <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
         <link rel="stylesheet" href="proyektimg9.css">
-        <link rel="stylesheet" href="fontawesome.css">
+        <link rel="stylesheet" href="assets/fontawesome/css/all.css">
 
     </head>
 
     <body>
-
         <div class="tentang-kami">
             <div class="container">
               <div class="row">
@@ -32,6 +31,56 @@
                   <div class="left-content">
                     <h4>TIM G9 DTS Progate Batch 2</h4>
                     <p>Kami adalah salah satu tim dari program Digital Talent Scholarship (DTS) yang bekerja sama dengan Progate selaku mitra pelatihan. Dengan pelatihan ini diharapkan peserta mengerti dasar pemrograman web (HTML, CSS dan Javascript) dan peserta memiliki kemampuan perencanaan pembangunan suatu aplikasi berbasis web secara mandiri. <br><br>Pelatihan HTML dan CSS akan mempelajari teori dan praktik pemrograman front-end secara daring/online (tampilan halaman web), peserta akan mempelajari cara membuat suatu halaman web modern dan beberapa animasi seperti formulir, tombol 3D, desain responsif menyesuaikan dengan perangkat pengguna. Pada pelatihan Javascript (ES6) peserta akan belajar menggunakan bahasa pemrograman dengan lebih interaktif, dinamis dan peserta akan membuat suatu halaman web dengan kode yang lebih efisien.</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="team-members">
+            <div class="container">
+              <div class="row">
+                <div class="colom-1">
+                  <div class="section-heading">
+                    <h2>Anggota TIM G9</h2>
+                  </div>
+                </div>
+                <div class="colom-3">
+                  <div class="team-member">
+                    <div class="thumb-container">
+                      <img src="assets/images/pp_nandra.png">
+                      <div class="hover-effect">
+                        <div class="hover-content">
+                          <ul class="social-icons">
+                            <li><a href="https://www.instagram.com/nandrasptr/"><i class="fab fa-instagram"></i></a></li>
+                            <li><a href="https://www.github.com/nandrasaputra"><i class="fab fa-github"></i></a></li>
+                            <li><a href="https://www.linkedin.com/in/nandra-saputra-b90b78157/"><i class="fab fa-linkedin"></i></a></li>
+                          </ul>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="down-content">
+                      <h4>Nandra Saputra</h4>
+                      <span>0447977041-21</span>
+                    </div>
+                  </div>
+                </div>
+                <div class="colom-3">
+                  <div class="team-member">
+                    <div class="thumb-container">
+                      <img src="assets/images/person_2.svg" alt="">
+                      <div class="hover-effect">
+                        <div class="hover-content">
+                          <ul class="social-icons">
+                            <li><a href="https://www.instagram.com/naufalnoumi/"><i class="fab fa-instagram"></i></a></li>
+                          </ul>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="down-content">
+                      <h4>Naufal Noumi</h4>
+                      <span>0447977111-86</span>
+                    </div>
                   </div>
                 </div>
               </div>
