--- a/index.html
+++ b/index.html
@@ -14,8 +14,17 @@
     </head>
 
     <body>
+
+      <header>
+        <div class="container-header">
+          <div class="header-left">
+            <img class="logo-header" src="assets/images/header-logo.png">
+          </div>
+        </div>
+      </header>
+      
         <div class="tentang-kami">
-            <div class="container">
+            <div class="container tentang-kami-container">
               <div class="row">
                 <div class="colom-1">
                   <div class="section-heading">
