--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@
                     </div>
                   </div>
                 </div>
+
                 <div class="colom-3">
                   <div class="team-member">
                     <div class="thumb-container">
@@ -87,11 +88,50 @@
                       </div>
                     </div>
                     <div class="down-content">
-                      <h4>Naufal Noumi</h4>
+                      <h4>Naufal Noumi Adam Pradipta</h4>
                       <span>0447977111-86</span>
                     </div>
                   </div>
                 </div>
+
+                <div class="colom-3">
+                  <div class="team-member">
+                    <div class="thumb-container">
+                      <img src="assets/images/person_3.svg" alt="">
+                      <div class="hover-effect">
+                        <div class="hover-content">
+                          <ul class="social-icons">
+                            <li><a href="https://www.github.com/fmuklis/"><i class="fab fa-github"></i></a></li>
+                          </ul>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="down-content">
+                      <h4>Muklis Fatoni</h4>
+                      <span>0447977081-39</span>
+                    </div>
+                  </div>
+                </div>
+
+                <div class="colom-3">
+                  <div class="team-member">
+                    <div class="thumb-container">
+                      <img src="assets/images/person_4.svg" alt="">
+                      <div class="hover-effect">
+                        <div class="hover-content">
+                          <ul class="social-icons">
+                            
+                          </ul>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="down-content">
+                      <h4>Muhammad Khaibar Putra Adithia</h4>
+                      <span>0447977041-52</span>
+                    </div>
+                  </div>
+                </div>
+
               </div>
             </div>
           </div>
