add more member

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                       <div class="hover-effect">
                         <div class="hover-content">
                           <ul class="social-icons">
-                            <li><a href="https://www.instagram.com/naufalnoumi/"><i class="fab fa-instagram"></i></a></li>
+                            <li><a href="https://www.instagram.com/nomnoumii/"><i class="fab fa-instagram"></i></a></li>
                           </ul>
                         </div>
                       </div>
@@ -120,7 +120,7 @@
                       <div class="hover-effect">
                         <div class="hover-content">
                           <ul class="social-icons">
-                            
+                            <li><a href="https://www.instagram.com/barcode.95/"><i class="fab fa-instagram"></i></a></li>
                           </ul>
                         </div>
                       </div>
@@ -128,6 +128,26 @@
                     <div class="down-content">
                       <h4>Muhammad Khaibar Putra Adithia</h4>
                       <span>0447977041-52</span>
+                    </div>
+                  </div>
+                </div>
+
+                <div class="colom-3">
+                  <div class="team-member">
+                    <div class="thumb-container">
+                      <img src="assets/images/person_5.svg" alt="">
+                      <div class="hover-effect">
+                        <div class="hover-content">
+                          <ul class="social-icons">
+                            <li><a href="https://www.instagram.com/nggaklah/"><i class="fab fa-instagram"></i></a></li>
+                            <li><a href="https://www.github.com/tidaaak/"><i class="fab fa-github"></i></a></li>
+                          </ul>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="down-content">
+                      <h4>Muhammad Aditya</h4>
+                      <span>0447977321-1</span>
                     </div>
                   </div>
                 </div>
